# rss-downloader

./: Cargo.toml  LICENSE  README.md  planning.txt
misc/: crontab_line
src/: add.rs  alias.rs  alias_util.rs  commands.rs  config.rs  delete.rs  feed_util.rs  main.rs  update.rs
test/: config.toml
